[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/Minimapa/minimap_img.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/Minimapa/player_mini_0.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/Minimapa/MiniMapa.gd" type="Script" id=3]
[ext_resource path="res://Juego/UI/Minimapa/min_enemy_2.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/Minimapa/estacion_recarga_mini.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/Minimapa/rele_mini.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/Minimapa/interceptor_mini_0.png" type="Texture" id=7]

[node name="MiniMapa" type="MarginContainer" groups=["contenedor_info"]]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -293.0
margin_right = 225.0
margin_bottom = -40.0
script = ExtResource( 3 )

[node name="CuadroMinimapa" type="NinePatchRect" parent="."]
margin_right = 450.0
margin_bottom = 253.0
rect_min_size = Vector2( 144, 81 )
texture = ExtResource( 1 )

[node name="ContenedorMinis" type="MarginContainer" parent="CuadroMinimapa"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 4.0
margin_right = -7.0
margin_bottom = -4.0

[node name="ZonaRenderizadoMinis" type="TextureRect" parent="CuadroMinimapa/ContenedorMinis"]
margin_right = 436.0
margin_bottom = 245.0

[node name="IconoPlayer" type="Sprite" parent="CuadroMinimapa/ContenedorMinis/ZonaRenderizadoMinis"]
position = Vector2( 222, 131 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconoBaseEnemiga" type="Sprite" parent="CuadroMinimapa/ContenedorMinis/ZonaRenderizadoMinis"]
visible = false
modulate = Color( 1, 0.298039, 0.917647, 1 )
position = Vector2( 97, 128 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="IconoEstacion" type="Sprite" parent="CuadroMinimapa/ContenedorMinis/ZonaRenderizadoMinis"]
visible = false
modulate = Color( 0.0823529, 0.866667, 0, 1 )
position = Vector2( 312, 106 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="IconoRele" type="Sprite" parent="CuadroMinimapa/ContenedorMinis/ZonaRenderizadoMinis"]
visible = false
modulate = Color( 0.00392157, 0.698039, 0.737255, 1 )
position = Vector2( 160, 68 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="IconoInterceptor" type="Sprite" parent="CuadroMinimapa/ContenedorMinis/ZonaRenderizadoMinis"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 75, 60 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
